Docs: add JavaFX SDK run commands